# plasmoid-adjustable-clock

./: CHANGELOG  CMakeLists.txt  COPYING  INSTALL  README  TODO  install.sh
applet/: AdjustableClock.cpp  AdjustableClock.h  Applet.cpp  Applet.h  CMakeLists.txt  Clock.cpp  Clock.h  ComponentDialog.cpp  ComponentDialog.h  ComponentWidget.cpp  ComponentWidget.h  Configuration.cpp  Configuration.h  DataSource.cpp  DataSource.h  DeclarativeWidget.cpp  DeclarativeWidget.h  EditorWidget.cpp  EditorWidget.h  ExpressionDelegate.cpp  ExpressionDelegate.h  ExpressionLineEdit.cpp  ExpressionLineEdit.h  FormatDelegate.cpp  FormatDelegate.h  FormatLineEdit.cpp  FormatLineEdit.h  OptionWidget.cpp  OptionWidget.h  PlaceholderDialog.cpp  PlaceholderDialog.h  PreviewDelegate.cpp  PreviewDelegate.h  ThemeDelegate.cpp  ThemeDelegate.h  ThemeWidget.cpp  ThemeWidget.h  WebView.cpp  WebView.h  plasma-applet-adjustableclock.desktop
applet/data/: clock.js  editor.js  enums.js  formats.xml  helper.js  resources.qrc  template.html  template.qml  themes.xml  view.qml
applet/locale/: CMakeLists.txt  Messages.sh  de.po  et.po  pl.po  plasma_applet_adjustableclock.pot  pt.po  pt_BR.po  sv.po  tr.po  uk.po
applet/themes/analog/: CMakeLists.txt  metadata.desktop
applet/themes/analog/contents/config/: main.xml
applet/themes/analog/contents/ui/: main.html
applet/themes/beclock/: CMakeLists.txt  metadata.desktop
applet/themes/beclock/contents/config/: main.xml
applet/themes/beclock/contents/ui/: main.html
applet/themes/binary/: CMakeLists.txt  metadata.desktop
applet/themes/binary/contents/config/: main.xml
applet/themes/binary/contents/ui/: main.html
applet/themes/calendar/: CMakeLists.txt  metadata.desktop
applet/themes/calendar/contents/config/: main.xml
applet/themes/calendar/contents/ui/: main.html
applet/themes/dbclock/: CMakeLists.txt  metadata.desktop
applet/themes/dbclock/contents/config/: main.xml
applet/themes/dbclock/contents/ui/: main.html
applet/themes/digital/: CMakeLists.txt  metadata.desktop
applet/themes/digital/contents/config/: main.xml
applet/themes/digital/contents/ui/: main.html
applet/themes/lcd/: CMakeLists.txt  metadata.desktop
applet/themes/lcd/contents/config/: main.xml
applet/themes/lcd/contents/ui/: main.html
applet/themes/progress/: CMakeLists.txt  metadata.desktop
applet/themes/progress/contents/config/: main.xml
applet/themes/progress/contents/ui/: main.html
applet/themes/ring/: CMakeLists.txt  metadata.desktop
applet/themes/ring/contents/config/: main.xml
applet/themes/ring/contents/ui/: main.html
applet/themes/svg/: metadata.desktop
applet/themes/svg/contents/config/: main.xml
applet/themes/svg/contents/ui/: main.html
applet/themes/train/: CMakeLists.txt  metadata.desktop
applet/themes/train/contents/config/: main.xml
applet/themes/train/contents/ui/: main.html
applet/themes/verbose/: CMakeLists.txt  metadata.desktop
applet/themes/verbose/contents/config/: main.xml
applet/themes/verbose/contents/ui/: main.html
applet/themes/vertical/: CMakeLists.txt  metadata.desktop
applet/themes/vertical/contents/ui/: main.html
applet/ui/: appearance.ui  clipboard.ui  component.ui  editor.ui  placeholder.ui  weather.ui
